# bebop-desktop-assitant

./: Cargo.toml  LICENSE.md  README.md  ai.md
src/: context_handler.rs  gemini.rs  lib.rs  main.rs
