[package]
name = "bebop-desktop-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = {version = "0.28.1", features = ["byot"]}
clipboard = "0.5.0"
dotenv = "0.15.0"
enigo = "0.3.0"
futures = "0.3.31"
rdev = "0.5.3"
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.100"
serde = { version = "1.0", features = ["derive"] }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
